--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
 .logo:hover {
   background-image: url(https://trello.com/assets/87e1af770a49ce8e84e3.gif);
 }
+
+.cardDetail-header {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
 /*
 .logo {
   height: 6em;
